--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -71,3 +71,15 @@ this.start=function(){var t=this;"complete"!==document.readyState?window.addEven
 try{(new g(100,"r","QSI_S_ZN_bqI2UdYr6jaMxMh","https://znbqi2udyr6jamxmh-rackspacecx.siteintercept.qualtrics.com/SIE/?Q_ZID=ZN_bqI2UdYr6jaMxMh")).start()}catch(i){}})();
 </script><div id='ZN_bqI2UdYr6jaMxMh'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
 <!--END WEBSITE FEEDBACK SNIPPET-->
+
+<!-- Google Analytics -->
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('create', 'UA-35639070-1', 'auto');
+    ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
